--- a/src/Kafka.Example.API/appsettings.json
+++ b/src/Kafka.Example.API/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "MessageQueueConnection": {
-    "MessageBus": "localhost:9092"
+    //localhost:9092 ou ip:90 ou ip apenas, 9092 portal default
+    "MessageBus": "192.168.0.239:9092"
   },
   "AllowedHosts": "*"
 }
